@@ -28,6 +28,7 @@ CAY-2357 Generic select queries silently convert result to nulls if no PK column
 CAY-2358 NPE when callbacks invoked on null objects
 CAY-2359 EJBQL: db path in not supported in ORDER BY
 CAY-2362 ColumnSelect: unable to use Property without type
+CAY-2363 ColumnSelect: unable to use from nested context
 
 ----------------------------------
 Release: 4.0.B1
